@@ -579,6 +579,23 @@ class Addresses_controller extends Common_api_functions  {
 	}
 
 	/**
+	 * This method will be used if subnetId is not present and will try to
+	 * find it in system itself.
+	 *
+	 * It will only take into consideration subnets that do not have underlying
+	 * slave subnets.
+	 *
+	 * In case more than 1 subnet is found error will be thrown.
+	 *
+	 * @method autosearch_subnet_id
+	 *
+	 * @return void
+	 */
+	private function autosearch_subnet_id () {
+
+	}
+
+	/**
 	 * Validates address on creation
 	 *
 	 * @access public
@@ -593,11 +610,14 @@ class Addresses_controller extends Common_api_functions  {
 
 		// fetch subnet
 		$subnet = $this->subnet_details;
-		// formulate CIDR
-		$subnet = $this->Subnets->transform_to_dotted ($subnet->subnet)."/".$subnet->mask;
+		// check if it is not folder
+		if($subnet->isFolder!="1") {
+			// formulate CIDR
+			$subnet = $this->Subnets->transform_to_dotted ($subnet->subnet)."/".$subnet->mask;
 
-		// validate address, that it is inside subnet, not subnet/broadcast
-		$this->Addresses->verify_address( $this->_params->ip_addr, $subnet, false, true );
+			// validate address, that it is inside subnet, not subnet/broadcast
+			$this->Addresses->verify_address( $this->_params->ip_addr, $subnet, false, true );
+		}
 
     	//validate and normalize MAC address
     	if(strlen($this->_params->mac)>0) {
